# alkane-engine

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: alkane.hpp.36115EDAB0E68B85.idx  audio.hpp.9742899B2EA8DEB5.idx  body.hpp.B29B3CE3685E25D9.idx  box2.hpp.525D32B9DE363484.idx  box2d.hpp.F0B4D729D0FA5B48.idx  collisions.hpp.6C181DD62322F817.idx  collisions.hpp.6F0FCB8CB67E0388.idx  colors.hpp.CC2102CB81B86212.idx  constants.hpp.4C4397C91B400BB5.idx  defaults.hpp.90E7AAF18BBE3A44.idx  engine.hpp.587C6971178A11FD.idx  engine.hpp.D022358A4BCB63A1.idx  engine.hpp.E3DC3B60E87BE6A0.idx  geometry.hpp.D8272A446FA84BBB.idx  glad.c.2BE78F0E3E855CF4.idx  glad.c.A57F52B1C87D67DD.idx  glad.c.E64FDCE685E52045.idx  glad.h.2740F2CC9F6A60BB.idx  glad.h.72DB1943F28F8E20.idx  glad.h.8F859CD51840B834.idx  glad.h.A52300E70E1128BF.idx  graphics.hpp.1DA8A99787F29599.idx  graphics.hpp.42937732D1671CCC.idx  graphics.hpp.73CE7FFCBE12E8FD.idx  input.hpp.42495904FE02DF1C.idx  input.hpp.578B3CEA1384F3D1.idx  input.hpp.F5084293183DBBC4.idx  khrplatform.h.2C81477736DCC7D7.idx  (+43 more)
docs/: Creating A Window.md  CreatingAWindow.md  Getting Started.md  GettingStarted.md  Introduction.md
examples/: CMakeLists.txt  build-test.sh  main.cpp  test.cpp
include/alkane/: engine.hpp  graphics.hpp  sprite.hpp  text_renderer.hpp
src/: CMakeLists.txt  glad.c  main.cpp
src/alkane/: alkane.hpp
src/alkane/audio/: audio.hpp
src/alkane/engine/: engine.hpp  scene.hpp
src/alkane/geometry/: box2.hpp  box2d.hpp  geometry.hpp  mesh2d.cpp  mesh2d.hpp  sprite2d.cpp  sprite2d.hpp  vector2d.hpp  vertex2d.hpp
src/alkane/graphics/: graphics.hpp  texture.hpp
src/alkane/input/: input.hpp
src/alkane/math/: colors.hpp  math.hpp  modelmatrix.hpp  ortho.hpp  transform.hpp  vectors.hpp
src/alkane/physics/: body.hpp  collisions.hpp  constants.hpp
src/alkane/platform/: window.hpp
src/alkane/primitives/: primitives.hpp  rectangle.hpp  triangle.hpp
src/alkane/renderer/: mesh.hpp  renderable.hpp  renderer.hpp  shader.hpp  sprite.cpp  sprite.hpp  text.hpp
src/alkane/shaders/: default.frag  default.vert
(+9 files in other folders)
